k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aws-devops-handbook
  labels:
    app: aws-devops-handbook

spec:
  replicas: 2

  selector:
    matchLabels:
      app: aws-devops-handbook

  template:
    metadata:
      labels:
        app: aws-devops-handbook

    spec:
      containers:
        - name: aws-devops-handbook
          image: 747848915242.dkr.ecr.us-east-1.amazonaws.com/aws-devops-handbook:v8
          imagePullPolicy: Always

          ports:
            - containerPort: 80

          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"

            limits:
              cpu: "250m"
              memory: "256Mi"
