k8s/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: aws-devops-handbook-service

spec:
  selector:
    app: aws-devops-handbook

  ports:
    - port: 80
      targetPort: 80
      protocol: TCP

  type: ClusterIP
